Updated build.gradle further to point to the root project's attributes.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion //"23.0.1"
 
     defaultConfig {
-        minSdkVersion 23
-        targetSdkVersion 28
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
         ndk {
